changes done on Features

--- a/src/test/resources/configuration/devconfig.properties
+++ b/src/test/resources/configuration/devconfig.properties
@@ -1,4 +1,7 @@
-browser=edge
+
+Browser=edge
+remoteURL=http://16.170.242.240:4444/wd/hub
+runMode=local
 url1=https://www.saucedemo.com/v1/index.html
 DB_HOST = localhost
 DB_PORT = 3306
